[gd_scene load_steps=7 format=2]

[ext_resource path="res://scripts/Effect.gd" type="Script" id=1]
[ext_resource path="res://scripts/Card.gd" type="Script" id=2]
[ext_resource path="res://assets/X9tYQOD_3x.png" type="Texture" id=3]
[ext_resource path="res://objects/DiceSlot.gd" type="Script" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 18, 22 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 18, 22 )

[node name="Card" type="StaticBody2D" groups=[
"card",
"pickable",
]]
input_pickable = true
script = ExtResource( 2 )

[node name="SpriteFront" type="Sprite" parent="."]
texture = ExtResource( 3 )
region_enabled = true
region_rect = Rect2( 960, 864, 48, 48 )

[node name="SpriteBack" type="Sprite" parent="."]
visible = false
texture = ExtResource( 3 )
region_enabled = true
region_rect = Rect2( 912, 816, 48, 48 )

[node name="Collision" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 2 )

[node name="Effect" type="Node" parent="."]
script = ExtResource( 1 )

[node name="DiceSlot" type="Node2D" parent="."]
position = Vector2( 0, 42 )
script = ExtResource( 4 )

[node name="Sprite" type="Sprite" parent="DiceSlot"]
texture = ExtResource( 3 )
region_enabled = true
region_rect = Rect2( 1872, 672, 48, 48 )
[connection signal="dice_applied" from="." to="DiceSlot" method="_on_Card_dice_applied"]
[connection signal="dice_applied" from="." to="Effect" method="_on_Card_dice_applied"]
[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="area_exited" from="Area2D" to="." method="_on_Area2D_area_exited"]
